<resources>
    <string name="app_name">TodoList</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_tulo">Título</string>
    <string name="label_data">Data</string>
    <string name="label_hour">Hora</string>
    <string name="label_cancelar">Cancelar</string>
    <string name="label_date">Date</string>
    <string name="label_tasks">Tarefas</string>
    <string name="description_newtask">Nova Tarefa</string>
    <string name="label_you_dont_have_tasks">label_you_dont_have_tasks</string>
</resources>